docs: make asciinema template based

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,11 @@
 site_name: task.mk
 site_url: https://gh.dayl.in/task.mk
 repo_url: https://github.com/daylinmorgan/task.mk
+edit_uri: edit/main/docs/
 repo_name: daylinmorgan/task.mk
 theme:
   name: material
+  custom_dir: docs/overrides
   features:
     - navigation.indexes
   palette:
@@ -11,8 +13,8 @@ theme:
 extra_css:
   - stylesheets/extra.css
   - stylesheets/asciinema-player.css
-# extra_javascript:
-  # - javascripts/asciinema-player.min.js
+extra_javascript:
+  - javascripts/asciinema-player.min.js
 plugins:
   - search
   - git-revision-date-localized:
